Fix /admin on mobile

--- a/views/css/admin/info.css
+++ b/views/css/admin/info.css
@@ -4,3 +4,5 @@ main {
 }
 
 tr > :not(:first-child) { text-align: right }
+
+@media (max-width: 34rem) { main { grid-template-columns: 1fr } }
